--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ test = [
     "pytest>=7.4.0",
     "httpx>=0.24.1",
     "scipy>=1.10",
+    "transformers>=4.44.0"
 ]
 dev = [
     "black>=23.3.0",
